# simulator

./: CMakeLists.txt  LICENSE.txt  Makefile  config.json  hello  hello.cpp  input.json  main.cpp  pre_conv_act.json  pre_conv_pool.json  simple_main.cpp  test
include/: activation.h  adder_tree.h  batch_normalization.h  cim_array.h  concat.h  convolution.h  fully_connected.h  pooling.h  pre_conv_act.h  pre_conv_pool.h  preprocess.h
input/: op.json
npu/: cim.cpp  cim.h  pre.cpp  pre.h  vpu.cpp  vpu.h
output/: input.json  test
run/: main.cpp  read.cpp  read.h
src/: activation.cpp  adder_tree.cpp  batch_normalization.cpp  cim_array.cpp  concat.cpp  convolution.cpp  fully_connected.cpp  main.cpp  pooling.cpp  pre_conv_act.cpp  pre_conv_pool.cpp  preprocess.cpp
